fix loader z-index

--- a/public/style.css
+++ b/public/style.css
@@ -176,7 +176,7 @@ a.invisible {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 10;
+  z-index: 5;
 }
 
 .spinner {
